--- a/SocialPlatform.Core/SocialPlatform.Core.csproj
+++ b/SocialPlatform.Core/SocialPlatform.Core.csproj
@@ -14,4 +14,10 @@
     </ItemGroup>
 
 
+    <ItemGroup>
+      <None Remove="Models\Enums\" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Models\Enums\" />
+    </ItemGroup>
 </Project>
